# programdesign-cource

c++/: pd1-tasks.md
cpp/: pd1-tasks.md
cpp/concept/: class.md  module.md  namespace.md  statement.md  template.md
cpp/example/: class.yaml  module.yaml  namespace.yaml  statement.yaml  template.yaml
design/problem_book/coffee_house/: README.md
design/problem_book/coffee_house/doc/: base.plantuml  (+4 more)
design/problem_book/drinks-selling-machine/: README.md
design/problem_book/drinks-selling-machine/C++/extensions/ext4/: CMakeLists.txt  DrinkSellingMachine.cpp  DrinkSellingMachine.h  Handler.cpp  Handler.h  main.cpp
design/problem_book/quests/: drinks_selling.md  drinks_selling_base.plantuml  drinks_selling_seq.plantuml  kino.md  kino_base.plantuml  kino_seq.plantuml
design/problem_book/treatment_assistant/: REAME.md
python/concept/: TAGS.md
python/example/: boolean.yaml  build-in.yaml  byte.yaml  class.yaml  decorator.yaml  dict.yaml  expression.yaml  float.yaml  function.yaml  generator.yaml  int.yaml  iterator.yaml  list.yaml  object.yaml  scope.yaml  set.yaml  statement.yaml  string.yaml  thread-process.yaml  tuple.yaml  type.yaml
python/note/: README.md
python/note/student-made/: Асинхронность.ipynb  Встроенные функции.ipynb  Генераторы, lambda-функции.ipynb  Исключения.ipynb  Итераторы.ipynb  Классы.ipynb  Метапрограммирование.ipynb  Обзор Python.ipynb  Объекты.ipynb  Работа с файлами.ipynb  Реактивное программирование.ipynb  Сериализация.ipynb  Типы данных.ipynb  Управление контекстом.ipynb  Управляющие конструкции.ipynb  Функции, декораторы.ipynb
(+100 files in other folders)
